chore: add docs, static assets, and update hadoop/kafka/spark project files
Made-with: Cursor